--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>MENOS ES MAS - BURGER</title>
 </head>
 
@@ -132,7 +132,7 @@
                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
                             href="https://fmovies-online.net">fmovies</a><br>
                         <a href="https://www.embedgooglemap.net">how do i add a google map to my website</a>
-                        
+
                     </div>
                 </div>
             </div>
