--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </header>
 
-    <h1 class="h1__HamburguesasSandwich">NUESTRAS </h1>
+    <h1 class="h1__HamburguesasSandwich">NUESTRAS HAMBURGUESAS</h1>
 
     <img class="panceta-flotante" src="img/panceta.png" alt="Panceta">
 
