--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>MENOS ES MAS - BURGER</title>
 </head>
 
 <body>
 
     <header>
-
         <div class="header__iconos">
             <ul>
                 <li> <a href="https://www.instagram.com/menosesmasburgers/?hl=en"><img src="img/instagram.png"
@@ -24,29 +26,69 @@
             </ul>
         </div>
         <div class="header__logo"><a href="index.html"> <img src="img/logo.png" alt="LogoMenosesMas"></a></div>
-        <nav>
-            <ul>
-                <li><a href="index.html">HAMBURGUESAS</a></li>
-                <li><a href="pages/sandwiches.html">SANDWICHES</a></li>
-                <li><a href="pages/menu.html">MENÚ</a></li>
-                <li><a href="pages/nuestrosProductos.html">NUESTROS PRODUCTOS</a></li>
-                <li><a href="pages/pedidos.html">PEDIDO</a></li>
-            </ul>
+
+        <!--inicio nav bs-->
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+            <div class="container-fluid ">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav nav-width justify-content-between">
+                        <a class="nav-link active" aria-current="page" href="index.html">HAMBURGUESAS</a>
+                        <a class="nav-link" href="pages/sandwiches.html">SANDWICHES</a>
+                        <a class="nav-link" href="pages/menu.html">MENÚ</a>
+                        <a class="nav-link" href="pages/nuestrosProductos.html">PRODUCTOS</a>
+                        <a class="nav-link" href="pages/pedidos.html">PEDIDOS</a>
+
+                    </div>
+                </div>
+            </div>
         </nav>
+
+        <!--fin nav bs-->
+
+        <!--inicia dropdown-->
+        <div class="container">
+            <div class="btn-group float-end ">
+                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Elegí tu Burger
+                </button>
+
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#classicatr">Classic ATR</a></li>
+                    <li><a class="dropdown-item" href="#ronrocurry">Ronro Curry</a></li>
+                    <li><a class="dropdown-item" href="#doncorleone">Don Corleone</a></li>
+                    <li><a class="dropdown-item" href="#parrillera">Parrillera</a></li>
+                    <li><a class="dropdown-item" href="#veggie">Veggie</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <!--finaliza dropdown-->
 
     </header>
 
-    <h1 class="h1__HamburguesasSandwich">NUESTRAS HAMBURGUESAS</h1>
 
+
+    <h1 class="h1__HamburguesasSandwich">NUESTRAS HAMBURGUESAS</h1>
     <img class="panceta-flotante" src="img/panceta.png" alt="Panceta">
 
 
-    <main>
+    <main class="container">
 
+        <div class="row" id="classicatr">
+            <div class="col-12 col-md-7 col-lg-6 " >
 
-        <section class="section__HamburguesasSandwich">
-            <article class="section__HamburguesasSandwich--individual">
                 <div class="imagenBurger"><img src="img/classicatr-burger.jpg" alt="Foto classicatr burger"></div>
+            </div>
+
+            <div class="col-12 col-md-5 col-lg-6">
                 <div class="descripcionBurger">
                     <div class="descripcionBurger__nombre"><img src="img/classicatr_nombre.png"
                             alt="Nombre classicatr burger">
@@ -57,10 +99,12 @@
                             Pepinos agridulces, Honey mustard.</p>
                     </div>
                 </div>
-            </article>
+            </div>
+        </div>
 
-            <article class="section__HamburguesasSandwich--individual2">
-                <div class="imagenBurger"><img src="img/ronrocurry-burger.jpg" alt="Foto Ronro burger"></div>
+        <div class="row" id="ronrocurry">
+
+            <div class="col-12 col-md-5 col-lg-6 order-last order-md-first order-lg-first " >
                 <div class="descripcionBurger">
                     <div class="descripcionBurger__nombre"><img src="img/ronrocurry_nombre.png"
                             alt="Nombre Ronro burger">
@@ -71,10 +115,20 @@
                             Ketchup al curry.</p>
                     </div>
                 </div>
-            </article>
+            </div>
 
-            <article class="section__HamburguesasSandwich--individual">
+            <div class="col-12 col-md-7 col-lg-6 order-first order-md-last order-lg-last">
+                <div class="imagenBurger"><img src="img/ronrocurry-burger.jpg" alt="Foto Ronro burger"></div>
+            </div>
+        </div>
+
+        <div class="row" id="doncorleone">
+            <div class="col-12 col-md-7 col-lg-6" >
+
                 <div class="imagenBurger"><img src="img/doncorleone-burger.jpg" alt="Foto Don Corleone burger"></div>
+            </div>
+
+            <div class="col-12 col-md-5 col-lg-6">
                 <div class="descripcionBurger">
                     <div class="descripcionBurger__nombre"><img src="img/doncorleone_nombre.png"
                             alt="Nombre Don Corleone burger">
@@ -85,10 +139,12 @@
                             Mayonesa de ajo.</p>
                     </div>
                 </div>
-            </article>
+            </div>
+        </div>
 
-            <article class="section__HamburguesasSandwich--individual2">
-                <div class="imagenBurger"><img src="img/parrillera-burger.jpg" alt="Foto Parrillera burger"></div>
+        <div class="row" id="parrillera">
+
+            <div class="col-12 col-md-5 col-lg-6 order-last order-md-first order-lg-first " >
                 <div class="descripcionBurger">
                     <div class="descripcionBurger__nombre"><img src="img/parrillera_nombre.png"
                             alt="Nombre Parrillera burger">
@@ -100,77 +156,111 @@
                         </p>
                     </div>
                 </div>
-            </article>
+            </div>
 
-            <article class="section__HamburguesasSandwich--individual">
+            <div class="col-12 col-md-7 col-lg-6 order-first order-md-last order-lg-last">
+                <div class="imagenBurger"><img src="img/parrillera-burger.jpg" alt="Foto Parrillera burger"></div>
+            </div>
+        </div>
+
+        <div class="row" id="veggie">
+            <div class="col-12 col-md-7 col-lg-6" >
+
                 <div class="imagenBurger"><img src="img/veggie-burger.jpg" alt="Foto Veggie burger"></div>
+            </div>
+
+            <div class="col-12 col-md-5 col-lg-6">
                 <div class="descripcionBurger">
-                    <div class="descripcionBurger__nombre"><img src="img/veggie_nombre.png" alt="Nombre Veggie burger">
+                    <div class="descripcionBurger__nombre"><img src="img/veggie_nombre.png" alt="Nombre Veggie">
                     </div>
                     <div class="descripcionBurger__detalle">
-                        <p>Pan de papá con triple fermentación hecho a mano, Doble medallón de soja
-                            texturizada, Lechuga fresca, Muzzarella, Tomates confitados, Mayonesa de palta.
-                        </p>
+                        <p>Pan de papá con triple fermentación hecho a mano, Doble medallón de soja texturizada, Lechuga
+                            fresca, Muzzarella, Tomates confitados, Mayonesa de palta.</p>
                     </div>
                 </div>
-            </article>
-
-
-
-        </section>
-
+            </div>
+        </div>
 
     </main>
 
     <footer>
-        <div class="footer__datos">
 
-            <div class="barrios-delivery">
-                <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="150" height="150" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=felix%20oregone%20742&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                            href="https://fmovies-online.net">fmovies</a><br>
-                        <a href="https://www.embedgooglemap.net">how do i add a google map to my website</a>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 col-md-3 col-lg-3">
+                    <div class="barrios-delivery">
+                        <div class="mapouter">
+                            <div class="gmap_canvas"><iframe width="150" height="150" id="gmap_canvas"
+                                    src="https://maps.google.com/maps?q=felix%20oregone%20742&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                                    href="https://fmovies-online.net">fmovies</a><br>
+                                <a href="https://www.embedgooglemap.net">how do i add a google map to my website</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-9 col-lg-9">
+                    <div class="footer__datos--div">
+                        <ul>
+                            <li><img src="img/phone.png" alt="telefono">1145362796</li>
+                            <li><img src="img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
+                            <li><img src="img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona Gratuita:
+                                Mataderos, Liniers, V. Luro.</li>
+                            <li>Otras zonas: consultar costos.</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-8 col-lg-10">
+                    <ul class="nav bg-transparent text-white-50 ">
+                        <li class="nav-item">
+                            <a class="nav-link active text-reset" aria-current="page" href="index.html">HAMBURGUESAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="pages/sandwiches.html">SANDWICHES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="pages/menu.html">MENÚ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="pages/nuestrosProductos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="pages/pedidos.html">PEDIDO</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 col-lg-2 justify-content-end ">
+                    <div class="footer__links--iconos ">
+                        <ul class="footer--ul">
+                            <li> <a href="https://www.instagram.com/menosesmasburgers/?hl=en"><img
+                                        src="img/instagram.png" alt="instagram"></a> </li>
+                            <li> <a href="#"><img src="img/whatsapp.png" alt="whatsapp"></a></li>
+                        </ul>
 
                     </div>
                 </div>
             </div>
-            <div class="footer__datos--div">
-                <ul>
-                    <li><img src="img/phone.png" alt="telefono">1145362796</li>
-                    <li><img src="img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
-                    <li><img src="img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona Gratuita:
-                        Mataderos, Liniers, V. Luro.</li>
-                    <li>Otras zonas: consultar costos.</li>
-                </ul>
-            </div>
         </div>
-
-        <div class="footer__links">
-            <div class="footer__links--iconos">
-                <ul>
-                    <li> <a href="https://www.instagram.com/menosesmasburgers/?hl=en"><img src="img/instagram.png"
-                                alt="instagram"></a> </li>
-                    <li> <a href="#"><img src="img/whatsapp.png" alt="whatsapp"></a></li>
-                </ul>
-
-            </div>
-            <nav class="footer__menu">
-                <ul>
-                    <li><a href="index.html">Hamburguesas</a></li>
-                    <li><a href="pages/sandwiches.html">Sandwiches</a></li>
-                    <li><a href="pages/menu.html">Menú</a></li>
-                    <li><a href="pages/nuestrosProductos.html">Nuestros Productos</a></li>
-                    <li><a href="pages/pedidos.html">Pedido</a></li>
-                </ul>
-            </nav>
-        </div>
-
 
     </footer>
 
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
