--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="header__logo"><a href="index.html"> <img src="img/logo.png" alt="LogoMenosesMas"></a></div>
 
         <!--inicio nav bs-->
-
+        
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <div class="container-fluid ">
                 <a class="navbar-brand" href="#"></a>
@@ -39,7 +39,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between">
-                        <a class="nav-link active" aria-current="page" href="index.html">HAMBURGUESAS</a>
+                        <a class="nav-link active activeBorder" aria-current="page" href="index.html">HAMBURGUESAS</a>
                         <a class="nav-link" href="pages/sandwiches.html">SANDWICHES</a>
                         <a class="nav-link" href="pages/menu.html">MENÚ</a>
                         <a class="nav-link" href="pages/nuestrosProductos.html">PRODUCTOS</a>
@@ -52,37 +52,17 @@
 
         <!--fin nav bs-->
 
-        <!--inicia dropdown-->
-        <div class="container">
-            <div class="btn-group float-end ">
-                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Elegí tu Burger
-                </button>
-
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#classicatr">Classic ATR</a></li>
-                    <li><a class="dropdown-item" href="#ronrocurry">Ronro Curry</a></li>
-                    <li><a class="dropdown-item" href="#doncorleone">Don Corleone</a></li>
-                    <li><a class="dropdown-item" href="#parrillera">Parrillera</a></li>
-                    <li><a class="dropdown-item" href="#veggie">Veggie</a></li>
-
-                </ul>
-            </div>
-        </div>
-        <!--finaliza dropdown-->
-
     </header>
 
 
 
-    <h1 class="h1__HamburguesasSandwich">NUESTRAS HAMBURGUESAS</h1>
+    <h1 class="h1__HamburguesasSandwich">NUESTRAS  HAMBURGUESAS</h1>
     <img class="panceta-flotante" src="img/panceta.png" alt="Panceta">
 
 
     <main class="container">
 
-        <div class="row" id="classicatr">
+        <div class="row" id="rowBurgerSandwich">
             <div class="col-12 col-md-7 col-lg-6 " >
 
                 <div class="imagenBurger"><img src="img/classicatr-burger.jpg" alt="Foto classicatr burger"></div>
@@ -102,7 +82,7 @@
             </div>
         </div>
 
-        <div class="row" id="ronrocurry">
+        <div class="row" id="rowBurgerSandwich">
 
             <div class="col-12 col-md-5 col-lg-6 order-last order-md-first order-lg-first " >
                 <div class="descripcionBurger">
@@ -122,7 +102,7 @@
             </div>
         </div>
 
-        <div class="row" id="doncorleone">
+        <div class="row" id="rowBurgerSandwich">
             <div class="col-12 col-md-7 col-lg-6" >
 
                 <div class="imagenBurger"><img src="img/doncorleone-burger.jpg" alt="Foto Don Corleone burger"></div>
@@ -142,7 +122,7 @@
             </div>
         </div>
 
-        <div class="row" id="parrillera">
+        <div class="row" id="rowBurgerSandwich">
 
             <div class="col-12 col-md-5 col-lg-6 order-last order-md-first order-lg-first " >
                 <div class="descripcionBurger">
@@ -163,7 +143,7 @@
             </div>
         </div>
 
-        <div class="row" id="veggie">
+        <div class="row" id="rowBurgerSandwich">
             <div class="col-12 col-md-7 col-lg-6" >
 
                 <div class="imagenBurger"><img src="img/veggie-burger.jpg" alt="Foto Veggie burger"></div>
@@ -182,6 +162,10 @@
         </div>
 
     </main>
+
+    <div class="barra">
+
+    </div>
 
     <footer>
 
@@ -223,7 +207,7 @@
                 <div class="col-12 col-md-8 col-lg-10">
                     <ul class="nav bg-transparent text-white-50 ">
                         <li class="nav-item">
-                            <a class="nav-link active text-reset" aria-current="page" href="index.html">HAMBURGUESAS</a>
+                            <a class="nav-link active activeBorder text-reset" aria-current="page" href="index.html">HAMBURGUESAS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-reset" href="pages/sandwiches.html">SANDWICHES</a>
@@ -255,12 +239,10 @@
 
     </footer>
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        
 </body>
 
 </html>
