--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">    <title>MENOS ES MAS - BURGER</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <title>MENOS ES MAS - BURGER</title>
 </head>
 
 <body>
@@ -21,15 +27,32 @@
             </ul>
         </div>
         <div class="header__logo"><a href="../index.html"> <img src="../img/logo.png" alt="LogoMenosesMas"></a></div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">HAMBURGUESAS</a></li>
-                <li><a href="sandwiches.html">SANDWICHES</a></li>
-                <li><a href="menu.html">MENÚ</a></li>
-                <li><a href="nuestrosProductos.html">NUESTROS PRODUCTOS</a></li>
-                <li><a href="pedidos.html">PEDIDO</a></li>
-            </ul>
+
+        <!--inicio nav bs-->
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+            <div class="container-fluid ">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav nav-width justify-content-between">
+                        <a class="nav-link" href="../index.html">HAMBURGUESAS</a>
+                        <a class="nav-link" href="sandwiches.html">SANDWICHES</a>
+                        <a class="nav-link active activeBorder" aria-current="page" href="menu.html">MENÚ</a>
+                        <a class="nav-link" href="nuestrosProductos.html">PRODUCTOS</a>
+                        <a class="nav-link" href="pedidos.html">PEDIDOS</a>
+
+                    </div>
+                </div>
+            </div>
         </nav>
+
+        <!--fin nav bs-->
+
     </header>
 
     <h2 class="h2__menu">MENÚ</h2>
@@ -74,7 +97,7 @@
                 <div class="Detalle-Dc">
                     <p class="nombreMenu">Don Corleone</p>
                     <p>Pan de papá con triple fermentación, Doble medallón de 110grs, Muzzarella
-                    rebozada, Tomates confitados, Albahaca fresca, Mayonesa de ajo.</p>
+                        rebozada, Tomates confitados, Albahaca fresca, Mayonesa de ajo.</p>
                 </div>
                 <div class="Simple-Dc">
                     <p class="precio">$500</p>
@@ -88,7 +111,7 @@
                 <div class="Detalle-P">
                     <p class="nombreMenu">Parrillera</p>
                     <p>Pan de papá con triple fermentación, Doble medallón de 110grs, Crocante de queso
-                    estacionado, Mix de vegetales asados, Mostaza argenta.</p>
+                        estacionado, Mix de vegetales asados, Mostaza argenta.</p>
                 </div>
                 <div class="Simple-P">
                     <p class="precio">$500</p>
@@ -102,7 +125,7 @@
                 <div class="Detalle-V">
                     <p class="nombreMenu">Veggie</p>
                     <p> Pan de papá con triple fermentación, Doble medallón de soja texturizada, Lechuga
-                    fresca, Muzzarella, Tomates confitados, Mayonesa de palta.</p>
+                        fresca, Muzzarella, Tomates confitados, Mayonesa de palta.</p>
                 </div>
                 <div class="Simple-V">
                     <p class="precio">$500</p>
@@ -118,55 +141,87 @@
 
 
     </main>
-    
+    <div class="barra">
+
+    </div>
+
 
     <footer>
-        <div class="footer__datos">
 
-            <div class="barrios-delivery">
-                <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="150" height="150" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=felix%20oregone%20742&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                            href="https://fmovies-online.net">fmovies</a><br>
-                        <a href="https://www.embedgooglemap.net">how do i add a google map to my website</a>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 col-md-3 col-lg-3">
+                    <div class="barrios-delivery">
+                        <div class="mapouter">
+                            <div class="gmap_canvas"><iframe width="150" height="150" id="gmap_canvas"
+                                    src="https://maps.google.com/maps?q=felix%20oregone%20742&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                                    href="https://fmovies-online.net">fmovies</a><br>
+                                <a href="https://www.embedgooglemap.net">how do i add a google map to my website</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-9 col-lg-9">
+                    <div class="footer__datos--div">
+                        <ul>
+                            <li><img src="../img/phone.png" alt="telefono">1145362796</li>
+                            <li><img src="../img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
+                            <li><img src="../img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona
+                                Gratuita:
+                                Mataderos, Liniers, V. Luro.</li>
+                            <li>Otras zonas: consultar costos.</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-8 col-lg-10">
+                    <ul class="nav bg-transparent text-white-50 ">
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="../index.html">HAMBURGUESAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="../pages/sandwiches.html">SANDWICHES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active activeBorder text-reset" aria-current="page" href="../pages/menu.html">MENÚ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="../pages/nuestrosProductos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="../pages/pedidos.html">PEDIDO</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 col-lg-2 justify-content-end ">
+                    <div class="footer__links--iconos ">
+                        <ul class="footer--ul">
+                            <li> <a href="https://www.instagram.com/menosesmasburgers/?hl=en"><img
+                                        src="../img/instagram.png" alt="instagram"></a> </li>
+                            <li> <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a></li>
+                        </ul>
 
                     </div>
                 </div>
             </div>
-            <div class="footer__datos--div">
-                <ul>
-                    <li><img src="../img/phone.png" alt="telefono">1145362796</li>
-                    <li><img src="../img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
-                    <li><img src="../img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona Gratuita:
-                        Mataderos, Liniers, V. Luro.</li>
-                    <li>Otras zonas: consultar costos.</li>
-                </ul>
-            </div>
         </div>
-
-        <div class="footer__links">
-            <div class="footer__links--iconos">
-                <ul>
-                    <li> <a href="https://www.instagram.com/menosesmasburgers/?hl=en"><img src="../img/instagram.png"
-                                alt="instagram"></a> </li>
-                    <li> <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a></li>
-                </ul>
-
-            </div>
-            <nav class="footer__menu">
-                <ul>
-                    <li><a href="../index.html">Hamburguesas</a></li>
-                    <li><a href="sandwiches.html">Sandwiches</a></li>
-                    <li><a href="menu.html">Menú</a></li>
-                    <li><a href="nuestrosProductos.html">Nuestros Productos</a></li>
-                    <li><a href="pedidos.html">Pedido</a></li>
-                </ul>
-            </nav>
-        </div>
-
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 
 
 </body>
