--- a/pages/nuestrosProductos.html
+++ b/pages/nuestrosProductos.html
@@ -57,7 +57,7 @@
 
     </header>
 
-    <h2 class="h1__HamburguesasSandwich">NUESTROS PRODUCTOS</h2>
+    <h2 class="h1__HamburguesasSandwich">PRODUCTOS</h2>
 
     <main class="container">
 
