--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -277,9 +277,9 @@
                 <div class="col-12 col-md-9 col-lg-9">
                     <div class="footer__datos--div">
                         <ul>
-                            <li><img src="img/phone.png" alt="telefono">1145362796</li>
-                            <li><img src="img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
-                            <li><img src="img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona Gratuita:
+                            <li><img src="../img/phone.png" alt="telefono">1145362796</li>
+                            <li><img src="../img/horario.png" alt="horario">Jue a Dom - 19 a 23hs.</li>
+                            <li><img src="../img/delivery.png" alt="Zona delivery">Delivery and Take Away - Zona Gratuita:
                                 Mataderos, Liniers, V. Luro.</li>
                             <li>Otras zonas: consultar costos.</li>
                         </ul>
