--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -25,7 +25,7 @@
                 <li> <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a></li>
             </ul>
         </div>
-        <div class="header__logo"><a href="index.html"> <img src="../img/logo.png" alt="LogoMenosesMas"></a></div>
+        <div class="header__logo"><a href="../index.html"> <img src="../img/logo.png" alt="LogoMenosesMas"></a></div>
 
         <!--inicio nav bs-->
 
